--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Lilita+One&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap"
       rel="stylesheet"
     />
+    <script src="login.js" defer></script>
   </head>
   <body>
     <div class="login-container">
