style profile css

--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="profile.css" />
   </head>
   <body>
     <div class="main-container">
@@ -102,7 +103,7 @@
           </a>
         </div>
       </aside>
-      
+
       </main>
     </div>
   </body>
