--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
           alt="Avatar Pengguna"
           class="profile-avatar"
         />
-        <h1 class="profile-name">Alex Nova</h1>
+        <h1 class="profile-name">Rachmad Febriananda</h1>
         <p class="profile-title">3D Artist & Motion Designer</p>
         <p class="profile-bio">
           Menjelajahi persimpangan antara seni dan teknologi. Japanese Pop
