add avatar image

--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
       <!-- Sidebar Profil (kiri) -->
       <aside class="profile-sidebar">
         <img
-          src="https://placehold.co/120x120/00ffff/0a0a0a?text=A"
+          src="img/rachmad.png"
           alt="Avatar Pengguna"
           class="profile-avatar"
         />
