--- a/profile.html
+++ b/profile.html
@@ -104,6 +104,74 @@
         </div>
       </aside>
 
+      <!-- Konten -->
+      <main class="portfolio-content">
+        <header class="portfolio-header">
+          <h2>Karya Terbaru</h2>
+        </header>
+
+        <div class="portfolio-grid">
+          <!-- Item 1 -->
+          <a href="img/kamakurajapan.jpg">
+            <div class="portfolio-item">
+              <img src="img/kamakurajapan.jpg" alt="Kamakura Sea Train" />
+              <div class="overlay">
+                <h3>Kamakura Sea Train</h3>
+                <p>Anime 3D Rendering</p>
+              </div>
+            </div>
+          </a>
+          <!-- Item 2 -->
+          <a href="img/metrotrain.jpg">
+            <div class="portfolio-item">
+              <img src="img/metrotrain.jpg" alt="Japanese Metro Train" />
+              <div class="overlay">
+                <h3>Japanese Metro Train</h3>
+                <p>3D Rendering</p>
+              </div>
+            </div>
+          </a>
+          <!-- Item 3 -->
+          <a href="img/singhasaritemple.jpg">
+            <div class="portfolio-item">
+              <img src="img/singhasaritemple.jpg" alt="Singhasari Temple" />
+              <div class="overlay">
+                <h3>Singhasari Temple</h3>
+                <p>3D Rendering</p>
+              </div>
+            </div>
+          </a>
+          <!-- Item 4 -->
+          <a href="img/rooftopshrine.jpg">
+            <div class="portfolio-item">
+              <img src="img/rooftopshrine.jpg" alt="Rooftop Shrine in Tokyo" />
+              <div class="overlay">
+                <h3>Rooftop Shrine in Tokyo</h3>
+                <p>Anime 3D Rendering</p>
+              </div>
+            </div>
+          </a>
+          <!-- Item 5 -->
+          <a href="img/stairs.jpg">
+            <div class="portfolio-item">
+              <img src="img/stairs.jpg" alt="Stairs in Tokyo" />
+              <div class="overlay">
+                <h3>Stairs in Tokyo</h3>
+                <p>Anime 3D Rendering</p>
+              </div>
+            </div>
+          </a>
+          <!-- Item 6 -->
+          <a href="img/underwater.jpg">
+            <div class="portfolio-item">
+              <img src="img/underwater.jpg" alt="Underwater Observation" />
+              <div class="overlay">
+                <h3>Underwater Observation</h3>
+                <p>3D Rendering & Motion Graphic</p>
+              </div>
+            </div>
+          </a>
+        </div>
       </main>
     </div>
   </body>
