add artwork detail description

--- a/artworkItem.html
+++ b/artworkItem.html
@@ -30,5 +30,40 @@
       </svg>
       <span>Kembali ke Profil</span>
     </a>
+
+    <div class="detail-container">
+      <!-- Tampilan Karya (kiri) -->
+      <div class="artwork-display">
+        <img
+          src="https://placehold.co/1200x900/0a0a0a/00ffff?text=Karya+Besar"
+          alt="Tampilan detail karya"
+        />
+      </div>
+
+      <!-- Info Karya (kanan) -->
+      <aside class="artwork-info">
+        <header class="artwork-header">
+          <h1>Proyek 'Nebula'</h1>
+          <div class="creator-info">
+            <img
+              src="https://placehold.co/48x48/00ffff/0a0a0a?text=A"
+              alt="Avatar kreator"
+            />
+            <div>
+              <div class="name">Alex Nova</div>
+              <div class="title">3D Artist</div>
+            </div>
+          </div>
+        </header>
+
+        <div class="artwork-description">
+          <p>
+            Ini adalah pemandangan pinggir pantai di Kamakura yang sering muncul
+            dalam anime. Saya mencoba menangkap suasana tenang dan damai dengan
+            pencahayaan matahari musim panas yang hangat. Dibuat menggunakan
+            Blender dan Eevee. Render cepat dengan hasil yang memuaskan!
+          </p>
+        </div>
+
   </body>
 </html>
