add style for artwork item

--- a/artworkItem.html
+++ b/artworkItem.html
@@ -43,15 +43,14 @@
       <!-- Info Karya (kanan) -->
       <aside class="artwork-info">
         <header class="artwork-header">
-          <h1>Proyek 'Nebula'</h1>
+          <h1>Kamakura Sea Train</h1>
           <div class="creator-info">
             <img
-              src="https://placehold.co/48x48/00ffff/0a0a0a?text=A"
-              alt="Avatar kreator"
+              src="img/rachmad.png"
             />
             <div>
-              <div class="name">Alex Nova</div>
-              <div class="title">3D Artist</div>
+              <div class="name">Rachmad Febriananda</div>
+              <div class="title">3D Artist & Motion Designer</div>
             </div>
           </div>
         </header>
@@ -65,5 +64,6 @@
           </p>
         </div>
 
+        
   </body>
 </html>
