--- a/profile.html
+++ b/profile.html
@@ -112,7 +112,7 @@
 
         <div class="portfolio-grid">
           <!-- Item 1 -->
-          <a href="img/kamakurajapan.jpg">
+          <a href="artworkItem.html">
             <div class="portfolio-item">
               <img src="img/kamakurajapan.jpg" alt="Kamakura Sea Train" />
               <div class="overlay">
