add comment section

--- a/artworkItem.html
+++ b/artworkItem.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detail Karya - Proyek 'Nebula'</title>
+    <title>Detail Karya - Kamakura Sea Train</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,10 +34,7 @@
     <div class="detail-container">
       <!-- Tampilan Karya (kiri) -->
       <div class="artwork-display">
-        <img
-          src="https://placehold.co/1200x900/0a0a0a/00ffff?text=Karya+Besar"
-          alt="Tampilan detail karya"
-        />
+        <img src="img/kamakurajapan.jpg" />
       </div>
 
       <!-- Info Karya (kanan) -->
@@ -45,9 +42,7 @@
         <header class="artwork-header">
           <h1>Kamakura Sea Train</h1>
           <div class="creator-info">
-            <img
-              src="img/rachmad.png"
-            />
+            <img src="img/rachmad.png" />
             <div>
               <div class="name">Rachmad Febriananda</div>
               <div class="title">3D Artist & Motion Designer</div>
@@ -63,7 +58,33 @@
             Blender dan Eevee. Render cepat dengan hasil yang memuaskan!
           </p>
         </div>
-
-        
+        <div class="comments-section">
+          <h2>Komentar (2)</h2>
+          <div class="comment">
+            <img
+              src="https://placehold.co/40x40/cccccc/0a0a0a?text=B"
+              alt="Avatar komentator"
+            />
+            <div class="comment-body">
+              <div class="author">Takumi Fujiwara</div>
+              <p>Keren! Pencahayaannya gokil.</p>
+            </div>
+          </div>
+          <div class="comment">
+            <img
+              src="https://placehold.co/40x40/888888/0a0a0a?text=C"
+              alt="Avatar komentator"
+            />
+            <div class="comment-body">
+              <div class="author">Uzumaki Naruto</div>
+              <p>
+                Gokil. Bagaimana caranya membuat tekstur dan shading seperti
+                itu?
+              </p>
+            </div>
+          </div>
+        </div>
+      </aside>
+    </div>
   </body>
 </html>
