--- a/artworkItem.html
+++ b/artworkItem.html
@@ -62,7 +62,7 @@
           <h2>Komentar (2)</h2>
           <div class="comment">
             <img
-              src="https://placehold.co/40x40/cccccc/0a0a0a?text=B"
+              src="https://placehold.co/40x40/cccccc/0a0a0a?text=T"
               alt="Avatar komentator"
             />
             <div class="comment-body">
@@ -72,7 +72,7 @@
           </div>
           <div class="comment">
             <img
-              src="https://placehold.co/40x40/888888/0a0a0a?text=C"
+              src="https://placehold.co/40x40/888888/0a0a0a?text=U"
               alt="Avatar komentator"
             />
             <div class="comment-body">
