--- a/profile.html
+++ b/profile.html
@@ -29,8 +29,8 @@
         </p>
 
         <div class="profile-actions">
-          <button class="action-button follow-btn">Ikuti</button>
-          <button class="action-button message-btn">Pesan</button>
+          <button class="action-button add-artwork-btn">Tambah Karya</button>
+          <button class="action-button share-btn">Bagikan Profil</button>
         </div>
 
         <div class="profile-stats">
