--- a/profile.html
+++ b/profile.html
@@ -13,6 +13,20 @@
     <link rel="stylesheet" href="profile.css" />
   </head>
   <body>
+    <header class="top-bar">
+      <a href="#" class="logo">Klip<span>In</span></a>
+      <nav class="desktop-nav">
+        <a href="#" class="active">Karya</a>
+        <a href="#">Tentang</a>
+        <a href="#">Kontak</a>
+      </nav>
+    </header>
+
+    <nav class="mobile-nav">
+      <a href="#" class="active">Karya</a>
+      <a href="#">Tentang</a>
+      <a href="#">Kontak</a>
+    </nav>
     <div class="main-container">
       <!-- Sidebar Profil (kiri) -->
       <aside class="profile-sidebar">
