add style & responsive for top bar & profile

--- a/profile.html
+++ b/profile.html
@@ -16,9 +16,10 @@
     <header class="top-bar">
       <a href="#" class="logo">Klip<span>In</span></a>
       <nav class="desktop-nav">
+        <a href="#">Eksplorasi</a>
         <a href="#" class="active">Karya</a>
-        <a href="#">Tentang</a>
-        <a href="#">Kontak</a>
+        <a href="#">Pekerjaan</a>
+        <a href="#">Rekrut</a>
       </nav>
     </header>
 
