--- a/profile.html
+++ b/profile.html
@@ -20,14 +20,10 @@
         <a href="#" class="active">Karya</a>
         <a href="#">Pekerjaan</a>
         <a href="#">Rekrut</a>
+        <a href="#">Pengaturan</a>
       </nav>
     </header>
 
-    <nav class="mobile-nav">
-      <a href="#" class="active">Karya</a>
-      <a href="#">Tentang</a>
-      <a href="#">Kontak</a>
-    </nav>
     <div class="main-container">
       <!-- Sidebar Profil (kiri) -->
       <aside class="profile-sidebar">
