--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="main-container">
-      <!-- Sidebar Profil (kiri) -->
+      <!-- kiri -->
       <aside class="profile-sidebar">
         <img
           src="img/rachmad.png"
@@ -115,14 +115,14 @@
         </div>
       </aside>
 
-      <!-- Konten -->
+      <!-- konten -->
       <main class="portfolio-content">
         <header class="portfolio-header">
           <h2>Karya Terbaru</h2>
         </header>
 
         <div class="portfolio-grid">
-          <!-- Item 1 -->
+          <!-- item 1 -->
           <a href="artworkItem.html">
             <div class="portfolio-item">
               <img src="img/kamakurajapan.jpg" alt="Kamakura Sea Train" />
@@ -132,7 +132,7 @@
               </div>
             </div>
           </a>
-          <!-- Item 2 -->
+          <!-- item 2 -->
           <a href="img/metrotrain.jpg">
             <div class="portfolio-item">
               <img src="img/metrotrain.jpg" alt="Japanese Metro Train" />
@@ -142,7 +142,7 @@
               </div>
             </div>
           </a>
-          <!-- Item 3 -->
+          <!-- item 3 -->
           <a href="img/singhasaritemple.jpg">
             <div class="portfolio-item">
               <img src="img/singhasaritemple.jpg" alt="Singhasari Temple" />
@@ -152,7 +152,7 @@
               </div>
             </div>
           </a>
-          <!-- Item 4 -->
+          <!-- item 4 -->
           <a href="img/rooftopshrine.jpg">
             <div class="portfolio-item">
               <img src="img/rooftopshrine.jpg" alt="Rooftop Shrine in Tokyo" />
@@ -162,7 +162,7 @@
               </div>
             </div>
           </a>
-          <!-- Item 5 -->
+          <!-- item 5 -->
           <a href="img/stairs.jpg">
             <div class="portfolio-item">
               <img src="img/stairs.jpg" alt="Stairs in Tokyo" />
@@ -172,7 +172,7 @@
               </div>
             </div>
           </a>
-          <!-- Item 6 -->
+          <!-- item 6 -->
           <a href="img/underwater.jpg">
             <div class="portfolio-item">
               <img src="img/underwater.jpg" alt="Underwater Observation" />
