--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div class="login-container">
+      <a href="#" class="logo">Klip<span>In</span></a>
       <h1>Selamat Datang</h1>
       <p>Masuk untuk melihat dunia imaji!</p>
       <form id="loginForm">
