--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             id="email"
             name="email"
             required
-            placeholder="anda@email.com"
+            value="alex.nova@email.com"
           />
         </div>
         <div class="input-group">
@@ -36,13 +36,11 @@
             id="password"
             name="password"
             required
-            placeholder="••••••••"
+            value="password123"
           />
         </div>
-        <button type="submit" class="login-button">Masuk</button>
-        <p id="errorMessage" class="error-message">
-          Email atau password tidak boleh kosong.
-        </p>
+        <button type="submit" class="login-btn">Masuk</button>
+        <p id="error-message">Email atau password salah.</p>
       </form>
     </div>
   </body>
