--- a/profile.html
+++ b/profile.html
@@ -25,19 +25,17 @@
     </header>
 
     <div class="main-container">
-      <!-- kiri -->
       <aside class="profile-sidebar">
         <img
-          src="img/rachmad.png"
+          src=""
           alt="Avatar Pengguna"
           class="profile-avatar"
+          id="profile-avatar"
         />
-        <h1 class="profile-name">Rachmad Febriananda</h1>
-        <p class="profile-title">3D Artist & Motion Designer</p>
-        <p class="profile-bio">
-          Menjelajahi persimpangan antara seni dan teknologi. Japanese Pop
-          Culture Enthusiast.
-        </p>
+
+        <h1 class="profile-name" id="profile-name">Memuat nama...</h1>
+        <p class="profile-title" id="profile-title">Memuat jabatan...</p>
+        <p class="profile-bio" id="profile-bio">Memuat bio...</p>
 
         <div class="profile-actions">
           <button class="action-button add-artwork-btn">Tambah Karya</button>
@@ -46,7 +44,7 @@
 
         <div class="profile-stats">
           <div class="stat-item">
-            <span class="count">9</span>
+            <span class="count">6</span>
             <span class="label">Karya</span>
           </div>
           <div class="stat-item">
@@ -121,69 +119,11 @@
           <h2>Karya Terbaru</h2>
         </header>
 
-        <div class="portfolio-grid">
-          <!-- item 1 -->
-          <a href="artworkItem.html">
-            <div class="portfolio-item">
-              <img src="img/kamakurajapan.jpg" alt="Kamakura Sea Train" />
-              <div class="overlay">
-                <h3>Kamakura Sea Train</h3>
-                <p>Anime 3D Rendering</p>
-              </div>
-            </div>
-          </a>
-          <!-- item 2 -->
-          <a href="img/metrotrain.jpg">
-            <div class="portfolio-item">
-              <img src="img/metrotrain.jpg" alt="Japanese Metro Train" />
-              <div class="overlay">
-                <h3>Japanese Metro Train</h3>
-                <p>3D Rendering</p>
-              </div>
-            </div>
-          </a>
-          <!-- item 3 -->
-          <a href="img/singhasaritemple.jpg">
-            <div class="portfolio-item">
-              <img src="img/singhasaritemple.jpg" alt="Singhasari Temple" />
-              <div class="overlay">
-                <h3>Singhasari Temple</h3>
-                <p>3D Rendering</p>
-              </div>
-            </div>
-          </a>
-          <!-- item 4 -->
-          <a href="img/rooftopshrine.jpg">
-            <div class="portfolio-item">
-              <img src="img/rooftopshrine.jpg" alt="Rooftop Shrine in Tokyo" />
-              <div class="overlay">
-                <h3>Rooftop Shrine in Tokyo</h3>
-                <p>Anime 3D Rendering</p>
-              </div>
-            </div>
-          </a>
-          <!-- item 5 -->
-          <a href="img/stairs.jpg">
-            <div class="portfolio-item">
-              <img src="img/stairs.jpg" alt="Stairs in Tokyo" />
-              <div class="overlay">
-                <h3>Stairs in Tokyo</h3>
-                <p>Anime 3D Rendering</p>
-              </div>
-            </div>
-          </a>
-          <!-- item 6 -->
-          <a href="img/underwater.jpg">
-            <div class="portfolio-item">
-              <img src="img/underwater.jpg" alt="Underwater Observation" />
-              <div class="overlay">
-                <h3>Underwater Observation</h3>
-                <p>3D Rendering & Motion Graphic</p>
-              </div>
-            </div>
-          </a>
+        <div class="portfolio-grid" id="portfolio-grid">
+          <p>Memuat karya...</p>
         </div>
       </main>
     </div>
+    <script src="profile.js"></script>
   </body>
 </html>
