--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             id="email"
             name="email"
             required
-            value="alex.nova@email.com"
+            placeholder="emailanda@gmail.com"
           />
         </div>
         <div class="input-group">
@@ -36,11 +36,10 @@
             id="password"
             name="password"
             required
-            value="password123"
+            placeholder="password123"
           />
         </div>
-        <button type="submit" class="login-btn">Masuk</button>
-        <p id="error-message">Email atau password salah.</p>
+        <button type="submit" class="login-button">Masuk</button>
       </form>
     </div>
   </body>
