--- a/profile.html
+++ b/profile.html
@@ -125,5 +125,45 @@
       </main>
     </div>
     <script src="profile.js"></script>
+
+    <div class="modal-overlay" id="work-modal-overlay" style="display: none">
+      <div class="modal-content">
+        <h2 id="modal-title">Tambah Karya Baru</h2>
+        <form id="work-form">
+          <input type="hidden" id="karya-id" />
+
+          <div class="form-group">
+            <label for="judul">Judul Karya</label>
+            <input type="text" id="judul" required />
+          </div>
+          <div class="form-group">
+            <label for="url_gambar">URL Gambar</label>
+            <input
+              type="url"
+              id="url_gambar"
+              placeholder="https://..."
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="deskripsi_singkat">Deskripsi Singkat</label>
+            <input type="text" id="deskripsi_singkat" />
+          </div>
+          <div class="form-group">
+            <label for="deskripsi_lengkap">Deskripsi Lengkap</label>
+            <textarea id="deskripsi_lengkap" rows="4"></textarea>
+          </div>
+
+          <div class="form-actions">
+            <button type="submit" class="btn-simpan">Simpan</button>
+            <button type="button" class="btn-batal" id="cancel-modal-btn">
+              Batal
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <script src="profile.js"></script>
   </body>
 </html>
