--- a/login.html
+++ b/login.html
@@ -39,7 +39,10 @@
             placeholder="password123"
           />
         </div>
-        <button type="submit" class="login-button">Masuk</button>
+        <button type="submit" class="login-button" href="profile.html">
+          Masuk
+        </button>
+        <p id="errorMessage" class="error-message" style="display: none"></p>
       </form>
     </div>
   </body>
