--- a/artworkItem.html
+++ b/artworkItem.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detail Karya - Kamakura Sea Train</title>
+    <title>Memuat Karya...</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,32 +32,26 @@
     </a>
 
     <div class="detail-container">
-      <!-- Tampilan Karya (kiri) -->
       <div class="artwork-display">
-        <img src="img/kamakurajapan.jpg" />
+        <img src="" alt="Memuat gambar..." id="artwork-image" />
       </div>
 
-      <!-- Info Karya (kanan) -->
       <aside class="artwork-info">
         <header class="artwork-header">
-          <h1>Kamakura Sea Train</h1>
+          <h1 id="artwork-title">Memuat judul...</h1>
           <div class="creator-info">
-            <img src="img/rachmad.png" />
+            <img src="" alt="Avatar Pembuat" id="creator-avatar" />
             <div>
-              <div class="name">Rachmad Febriananda</div>
-              <div class="title">3D Artist & Motion Designer</div>
+              <div class="name" id="creator-name">Memuat nama...</div>
+              <div class="title" id="creator-title">Memuat jabatan...</div>
             </div>
           </div>
         </header>
 
         <div class="artwork-description">
-          <p>
-            Ini adalah pemandangan pinggir pantai di Kamakura yang sering muncul
-            dalam anime. Saya mencoba menangkap suasana tenang dan damai dengan
-            pencahayaan matahari musim panas yang hangat. Dibuat menggunakan
-            Blender dan Eevee. Render cepat dengan hasil yang memuaskan!
-          </p>
+          <p id="artwork-description">Memuat deskripsi...</p>
         </div>
+
         <div class="comments-section">
           <h2>Komentar (2)</h2>
           <div class="comment">
@@ -86,5 +80,7 @@
         </div>
       </aside>
     </div>
+
+    <script src="artworkItem.js"></script>
   </body>
 </html>
