add new CRUD bootstrap

--- a/profile.html
+++ b/profile.html
@@ -21,6 +21,12 @@
         <a href="#">Pekerjaan</a>
         <a href="#">Rekrut</a>
         <a href="#">Pengaturan</a>
+        <a
+          href="admin/index.php"
+          style="color: white; font-weight: 600; hover: var(--accent-color)"
+        >
+          Admin Panel
+        </a>
       </nav>
     </header>
 
