add register & logout session

--- a/login.html
+++ b/login.html
@@ -39,6 +39,9 @@
             placeholder="password123"
           />
         </div>
+        <div class="register-link">
+          Belum punya akun? <a href="register.html">Daftar di sini</a>
+        </div>
         <button type="submit" class="login-button" href="profile.html">
           Masuk
         </button>
