--- a/profile.html
+++ b/profile.html
@@ -21,11 +21,13 @@
         <a href="#">Pekerjaan</a>
         <a href="#">Rekrut</a>
         <a href="#">Pengaturan</a>
+        <a href="admin/index.php">Mode Admin</a>
         <a
-          href="admin/index.php"
-          style="color: white; font-weight: 600; hover: var(--accent-color)"
+          href="#"
+          id="public-logout-btn"
+          style="color: #ff6b6b; font-weight: 600"
         >
-          Admin Panel
+          Logout
         </a>
       </nav>
     </header>
